# cloudflare-vercel-cname-switcher

./: .gitignore  pyproject.toml
switcher/: cloudflare.py  main.py  vercel.py
